name:                Saint
version:             0.1.2
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Saint#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src,
                       grammar
  exposed-modules:     Saint,
                       Saint.Types,
                       Saint.Expressions,
                       Saint.TypeChecker,
                       Saint.TypedValues,
                       Saint.Interpreter,
                       Saint.Library,
                       Saint.TypeBuildingBlocks,
                       Saint.CoProducts,
                       Lambda.Abs,
                       Lambda.ErrM,
                       Lambda.Lex,
                       Lambda.Par,
                       Lambda.Skel,
                       Lambda.Print
  build-depends:       base >= 4.7 && < 5,
                       array,
                       containers,
                       mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Saint
